# dit_parallel

./: README.md  install.sh  pyproject.toml  test_parallel_accuracy.py  test_parallel_model.py  test_ref_model.py
Wan2.1/: generate.py  run.sh  wan_patched.py
Wan2.1/wan/modules/: attention.py  model.py
dit_parallel/: context.py  layers.py  model.py  ringattention.py  tp.py
dit_parallel/benchmark/: profile_dit.py
dit_parallel/models/: parallel_dit.py  parallel_model.py  profile.py  profile_dit.py  ref_model.py  reference_dit.py
