[project]
name = "dit-parallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "torch>=2.7.1",
    "torchao",
]

[project.optional-dependencies]
build = ["torch"]
compile = ["flash-attn"]
#compile = ["flash-attn-3 @ git+https://github.com/Dao-AILab/flash-attention#subdirectory=hopper"]

[tool.setuptools.packages.find]
exclude = ["test_outputs*", "*.tests", "*.tests.*", "tests.*", "tests"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops", "ninja"]